--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                 </nav>
-                <button class="header__btn">
+                <button class="btn header__btn">
                     Заказать
                 </button>
             </div>
@@ -223,6 +223,79 @@
                 </div>
             </div>
         </section>
+        <section class="section delivery">
+            <div class="container delivery__container">
+                <div class="title delivery__tittle">Закажите доставку</div>
+                <div class="delivery__form">
+                    <form action="" class="delivery__form-elem">
+                        <div class="delivery__form-content">
+                            <div class="delivery__form-row">
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Имя</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Телефон</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                            </div>
+                            <div class="delivery__form-row">
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Улица</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                            </div>
+                            <div class="delivery__form-row">
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Дом</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Корпус</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Квартира</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Этаж</div>
+                                    <input type="text" class="delivery__form-input">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="delivery__form-content">
+                            <div class="delivery__form-row">
+                                <label class="delivery__form-block">
+                                    <div class="delivery__form-block-tittle">Комментарий</div>
+                                    <input type="text" class="delivery__form-input delivery__form-input--comment">
+                                </label>
+                            </div>
+                            <div class="delivery__form-row">
+                                <label class="delivery__form-check">
+                                    <input type="radio" class="delivery__form-radio">
+                                    <div class="delivery__form-block-tittle">Потребуется сдача</div>
+                                </label>
+                                <label class="delivery__form-check">
+                                    <input type="radio" class="delivery__form-radio">
+                                    <div class="delivery__form-block-tittle">Оплата по карте</div>
+                                </label>
+                            </div>
+                            <div class="delivery__form-row">
+                                <label class="delivery__form-check">
+                                    <input type="radio" class="delivery__form-radio">
+                                    <div class="delivery__form-block-tittle">Не перезванивать</div>
+                                </label>
+                            </div>
+                            <div class="delivery__form-row">
+                                <button class="btn delivery__btn">Заказать</button>
+                                <button class="btn delivery__btn-clear">Очистить</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
         <section class="map">
             <footer class="footer">
                 <div class="container footer__container">
@@ -257,7 +330,6 @@
                 </div>
             </footer>
         </section>
-
     </div>
     <div class="side-nav">
         <ul class="side-nav__list">
