adaptive design for tablets

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </div>
         </section>
         <section class="section team">
-            <div class="team__description">
-                <div class="container team__container">
+            <div class="container team__container">
+                <div class="team__description">
                     <h1 class="title team__tittle">Команда</h1>
                     <div class="team__accordion">
                         <ul class="team__lis">
@@ -139,7 +139,7 @@
                     <ul class="menu__list">
                         <li class="menu__item">
                             <div class="menu__link-for menu__link-for-meat">
-                                <h2 class="menu__subtittle">Для мясоедов</h2>
+                                Для мясоедов
                             </div>
                             <div class="menu__more menu__more-meat">
                                 <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem eos esse quaerat quam sed voluptates. Aliquam eligendi excepturi, minima numquam obcaecati optio porro quos tempora? Beatae facere illum saepe tempore?</p>
@@ -147,7 +147,7 @@
                         </li>
                         <li class="menu__item">
                             <div class="menu__link-for menu__link-for-veg">
-                                <h2 class="menu__subtittle">Вегетарианское</h2>
+                                Вегетарианское
                             </div>
                             <div class="menu__more menu__more-veg">
                                 <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequatur consequuntur illo, illum impedit laborum natus, placeat praesentium provident quam quasi qui quis quo. At eum minima quisquam recusandae repellat.</p>
@@ -155,7 +155,7 @@
                         </li>
                         <li class="menu__item">
                             <div class="menu__link-for menu__link-for-diet">
-                                <h2 class="menu__subtittle">Диетическое</h2>
+                                Диетическое
                             </div>
                             <div class="menu__more menu__more-diet">
                                 <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad aliquid at beatae delectus doloribus earum eligendi esse fugiat harum ipsum itaque labore, provident qui quis saepe sapiente ut voluptatibus?</p>
