add adaptive for phone

--- a/index.html
+++ b/index.html
@@ -65,18 +65,24 @@
                 <ul class="best__list">
                     <li class="best__item">
                         <div class="best__item-img best__item-img-meat"></div>
-                        <h2 class="best__item-tittle">100% свежее мясо</h2>
-                        <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
+                        <div class="best__item-content">
+                            <h2 class="best__item-tittle">100% свежее мясо</h2>
+                            <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
+                        </div>
                     </li>
                     <li class="best__item">
                         <div class="best__item-img best__item-img-hand"></div>
-                        <h2 class="best__item-tittle">Ручная сборка</h2>
-                        <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
+                        <div class="best__item-content">
+                            <h2 class="best__item-tittle">Ручная сборка</h2>
+                            <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
+                        </div>
                     </li>
                     <li class="best__item">
                         <div class="best__item-img best__item-img-natural"></div>
-                        <h2 class="best__item-tittle">Натуральные ингредиенты</h2>
-                        <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
+                        <div class="best__item-content">
+                            <h2 class="best__item-tittle">Натуральные ингредиенты</h2>
+                            <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -271,7 +277,7 @@
                                     <input type="text" class="delivery__form-input delivery__form-input--comment">
                                 </label>
                             </div>
-                            <div class="delivery__form-row">
+                            <div class="delivery__form-row delivery__form-row--center">
                                 <label class="delivery__form-check">
                                     <input type="radio" class="delivery__form-radio">
                                     <div class="delivery__form-block-tittle">Потребуется сдача</div>
@@ -281,13 +287,13 @@
                                     <div class="delivery__form-block-tittle">Оплата по карте</div>
                                 </label>
                             </div>
-                            <div class="delivery__form-row">
+                            <div class="delivery__form-row delivery__form-row--center">
                                 <label class="delivery__form-check">
                                     <input type="radio" class="delivery__form-radio">
                                     <div class="delivery__form-block-tittle">Не перезванивать</div>
                                 </label>
                             </div>
-                            <div class="delivery__form-row">
+                            <div class="delivery__form-row delivery__form-row--center">
                                 <button class="btn delivery__btn">Заказать</button>
                                 <button class="btn delivery__btn-clear">Очистить</button>
                             </div>
