add yandex maps

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Burger</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+    </script>
+    <script src="ymaps.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -303,6 +306,7 @@
             </div>
         </section>
         <section class="map">
+            <div class="map__yandex" id="map"></div>
             <footer class="footer">
                 <div class="container footer__container">
                     <div class="footer__contacts">
