--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                         </li>
                     </ul>
                 </nav>
-                <!--<button class="btn header__btn">-->
-                    <!--Заказать-->
-                <!--</button>-->
+                <div class="header__menu"></div>
             </div>
         </header>
         <section class="section natural">
