--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="container header__container">
                 <div class="header__logo">
                     <div class="logo">
-                        <a href="index.html" class="logo__link">
-                            <img src="img/logo/logo.png" alt="Mr burger">
-                        </a>
+                        <svg class="logo__img">
+                            <use xlink:href="img/svg/sprite/content.svg#logo"></use>
+                        </svg>
                     </div>
                 </div>
                 <nav class="nav">
@@ -70,21 +70,27 @@
                 <h2 class="title best__tittle">Мы лучшие</h2>
                 <ul class="best__list">
                     <li class="best__item">
-                        <div class="best__item-img best__item-img-meat"></div>
+                        <svg class="best__item-img">
+                            <use xlink:href="img/svg/sprite/content.svg#meat"></use>
+                        </svg>
                         <div class="best__item-content">
                             <h2 class="best__item-tittle">100% свежее мясо</h2>
                             <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
                         </div>
                     </li>
                     <li class="best__item">
-                        <div class="best__item-img best__item-img-hand"></div>
+                        <svg class="best__item-img">
+                            <use xlink:href="img/svg/sprite/content.svg#hand"></use>
+                        </svg>
                         <div class="best__item-content">
                             <h2 class="best__item-tittle">Ручная сборка</h2>
                             <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
                         </div>
                     </li>
                     <li class="best__item">
-                        <div class="best__item-img best__item-img-natural"></div>
+                        <svg class="best__item-img">
+                            <use xlink:href="img/svg/sprite/content.svg#natural"></use>
+                        </svg>
                         <div class="best__item-content">
                             <h2 class="best__item-tittle">Натуральные ингредиенты</h2>
                             <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
@@ -314,28 +320,41 @@
                 <div class="container footer__container">
                     <div class="footer__contacts">
                         <p class="footer__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</p>
-                        <a href="+78123771377" type="tel" class="footer__tel">+7 (812) 377-13-77</a>
+                        <a href="+78123771377" type="tel" class="footer__tel">
+                            <svg class="footer__tel-img">
+                                <use xlink:href="img/svg/sprite/soc.svg#phone"></use>
+                            </svg>
+                            +7 (812) 377-13-77
+                        </a>
                     </div>
                     <div class="footer__socials">
                         <ul class="footer__list">
                             <li class="footer__item">
                                 <a href="#" class="footer__soc-link">
-                                    <div class="footer__soc footer__soc-vk"></div>
+                                    <svg class="footer__soc-icon">
+                                        <use xlink:href="img/svg/sprite/soc.svg#vk"></use>
+                                    </svg>
                                 </a>
                             </li>
                             <li class="footer__item">
                                 <a href="#" class="footer__soc-link">
-                                    <div class="footer__soc footer__soc-fb"></div>
+                                    <svg class="footer__soc-icon">
+                                        <use xlink:href="img/svg/sprite/soc.svg#fb"></use>
+                                    </svg>
                                 </a>
                             </li>
                             <li class="footer__item">
                                 <a href="#" class="footer__soc-link">
-                                    <div class="footer__soc footer__soc-inst"></div>
+                                    <svg class="footer__soc-icon">
+                                        <use xlink:href="img/svg/sprite/soc.svg#inst"></use>
+                                    </svg>
                                 </a>
                             </li>
                             <li class="footer__item">
                                 <a href="#" class="footer__soc-link">
-                                    <div class="footer__soc footer__soc-tw"></div>
+                                    <svg class="footer__soc-icon">
+                                        <use xlink:href="img/svg/sprite/soc.svg#tw"></use>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
