add link in header for tablets and phones

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                         </svg>
                     </div>
                 </div>
+                <div class="header__add">
+                    <a href="#" class="header__add-link">
+                        <div class="header__add-btn">Заказать</div>
+                    </a>
+                </div>
                 <nav class="nav">
                     <ul class="header__list">
                         <li class="header__item">
