--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             <div class="delivery__form-row">
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Комментарий</div>
-                                    <textarea name="comment" id="" cols="50" rows="10" class="delivery__form-comment"></textarea>
+                                    <textarea name="comment" id="" cols="25" rows="10" class="delivery__form-comment"></textarea>
                                 </label>
                             </div>
                             <div class="delivery__form-row delivery__form-row--center">
@@ -315,8 +315,8 @@
                                 </label>
                             </div>
                             <div class="delivery__form-row delivery__form-row--center">
-                                <button class="btn delivery__btn">Заказать</button>
-                                <button class="btn delivery__btn-clear">Очистить</button>
+                                <button type="button" class="btn delivery__btn">Заказать</button>
+                                <button type="button" class="btn delivery__btn-clear">Очистить</button>
                             </div>
                         </div>
                     </form>
@@ -331,7 +331,7 @@
                         <p class="footer__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</p>
                         <a href="+78123771377" type="tel" class="footer__tel">
                             <svg class="footer__tel-img">
-                                <use xlink:href="img/svg/sprite/soc.svg#phone"></use>
+                                <use xlink:href="img/svg/sprite/content.svg#phone"></use>
                             </svg>
                             +7 (812) 377-13-77
                         </a>
