--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     </a>
                 </div>
             </div>
-            <div class="natural__menu">
+            <div class="natural__menu" id="menu">
                 <div class="container">
-                      <div class="menu__exit"></div>
+                      <div class="menu__exit" id="closeMenu"></div>
                 <ul class="menu__list">
                     <li class="menu__item">
                         <a href="#" class="menu__link">о нас</a>
