add button in header and burger-menu

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="header__menu" id="openMenu"></div>
+                <button class="header__menu"></button>
             </div>
         </header>
         <section class="section natural">
@@ -72,27 +72,27 @@
             </div>
             <div class="natural__menu" id="menu">
                 <div class="container">
-                      <div class="menu__exit" id="closeMenu"></div>
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">о нас</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">бургеры</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">команда</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">меню</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">отзывы</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">котакты</a>
-                    </li>
-                </ul>
+                    <button class="menu__exit"></button>
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">о нас</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">бургеры</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">команда</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">меню</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">отзывы</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">котакты</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
