add oneButton for menu

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="natural__menu" id="menu">
                 <div class="container">
-                    <button class="menu__exit"></button>
+                    <!-- <button class="menu__exit"></button> -->
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a href="#" class="menu__link">о нас</a>
