--- a/index.html
+++ b/index.html
@@ -70,27 +70,27 @@
                     </a>
                 </div>
             </div>
-            <div class="natural__menu" id="menu">
+            <div class="natural__burger-menu" id="menu">
                 <div class="container">
                     <!-- <button class="menu__exit"></button> -->
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">о нас</a>
+                    <ul class="burger-menu__list">
+                        <li class="burger-menu__item">
+                            <a href="#" class="burger-menu__link">о нас</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">бургеры</a>
+                        <li class="burger-menu__item">
+                            <a href="#" class="burger-menu__link">бургеры</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">команда</a>
+                        <li class="burger-menu__item">
+                            <a href="#" class="burger-menu__link">команда</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">меню</a>
+                        <li class="burger-menu__item">
+                            <a href="#" class="burger-menu__link">меню</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">отзывы</a>
+                        <li class="burger-menu__item">
+                            <a href="#" class="burger-menu__link">отзывы</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">котакты</a>
+                        <li class="burger-menu__item">
+                            <a href="#" class="burger-menu__link">котакты</a>
                         </li>
                     </ul>
                 </div>
