Change btn on slider

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         </section>
         <section class="section burger-info">
             <div class="container burger-info__container">
-                <div class="burger-info__btn-left">
+                <button type="button" class="burger-info__btn-left">
                     <svg class="btn-left__svg">
                         <use xlink:href="img/svg/sprite/content.svg#scroll"></use>
                     </svg>
-                </div>
+                </button>
                 <div class="burger-info__slide">
                     <div class="slide__decor">
                         <div class="slide__decor-img"></div>
@@ -168,11 +168,11 @@
                         </a>
                     </div>
                 </div>
-                <div class="burger-info__btn-right">
+                <button type="button" class="burger-info__btn-right">
                     <svg class="btn-right__svg">
                         <use xlink:href="img/svg/sprite/content.svg#scroll"></use>
                     </svg>
-                </div>
+                </button>
             </div>
         </section>
         <section class="section team">
