Add team accordion

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="team__description">
                     <h1 class="title team__tittle">Команда</h1>
                     <div class="team__accordion">
-                        <ul class="team__lis">
+                        <ul class="team__list">
                             <li class="team__item">
                                 <button class="team__item-btn">Дэниэл Редклиф</button>
                                 <div class="team__link-more">
@@ -191,7 +191,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="team__item team__item--active">
+                            <li class="team__item">
                                 <button class="team__item-btn">Ричард Джеймс</button>
                                 <div class="team__link-more">
                                     <img src="img/ava/team-ava.png" alt="Оператор" class="team__more-ava">
