--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                 <h1 class="title menu__tittle">Меню</h1>
                 <div class="menu__accordion">
                     <ul class="menu__list">
-                        <li class="menu__item menu__item--active">
+                        <li class="menu__item">
                             <div class="menu__link-for menu__link-for-meat">
                                 <div class="menu__link-text">Для мясоедов</div>
                             </div>
-                            <div class="menu__more menu__more-meat">
+                            <div class="menu__more">
                                 <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem eos esse quaerat quam sed
                                     voluptates. Aliquam eligendi excepturi, minima numquam obcaecati optio porro quos tempora?
                                     Beatae facere illum saepe tempore?</p>
@@ -245,7 +245,7 @@
                             <div class="menu__link-for menu__link-for-veg">
                                 <div class="menu__link-text">Вегетарианское</div>
                             </div>
-                            <div class="menu__more menu__more-veg">
+                            <div class="menu__more">
                                 <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequatur consequuntur
                                     illo, illum impedit laborum natus, placeat praesentium provident quam quasi qui quis
                                     quo. At eum minima quisquam recusandae repellat.</p>
@@ -255,7 +255,7 @@
                             <div class="menu__link-for menu__link-for-diet">
                                 <div class="menu__link-text">Диетическое</div>
                             </div>
-                            <div class="menu__more menu__more-diet">
+                            <div class="menu__more">
                                 <p class="menu__more-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad aliquid at beatae delectus
                                     doloribus earum eligendi esse fugiat harum ipsum itaque labore, provident qui quis saepe
                                     sapiente ut voluptatibus?</p>
@@ -501,6 +501,7 @@
             </li>
         </ul>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="ymaps.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </body>
