--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger</title>
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
@@ -133,14 +134,45 @@
         </section>
         <section class="section burger-info">
             <div class="container burger-info__container">
-                <button type="button" class="burger-info__btn-left">
+                <!-- <button type="button" class="burger-info__btn-left">
                     <svg class="btn-left__svg">
                         <use xlink:href="img/svg/sprite/content.svg#scroll"></use>
                     </svg>
-                </button>
+                </button> -->
                 <div class="burger-info__slide">
                     <div class="slide__decor">
-                        <div class="slide__decor-img"></div>
+                        <div class="slider">
+                            <div class="slider__slide">
+                                <div class="slide__decor-img"></div>
+                                <div class="slide__content">
+                                    <div class="title slide__title">Dark beef burger</div>
+                                    <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего
+                                        сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением
+                                        экзотического соуса чураско.</p>
+                                    <div class="slide__price">500
+                                        <span class="slide__price-val">рублей</span>
+                                    </div>
+                                    <a href="#" class="slide__link">
+                                        <div class="slide__btn">Заказать</div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                    <div class="slide__decor-img"></div>
+                                    <div class="slide__content">
+                                        <div class="title slide__title">Dark beef burger</div>
+                                        <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего
+                                            сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением
+                                            экзотического соуса чураско.</p>
+                                        <div class="slide__price">500
+                                            <span class="slide__price-val">рублей</span>
+                                        </div>
+                                        <a href="#" class="slide__link">
+                                            <div class="slide__btn">Заказать</div>
+                                        </a>
+                                    </div>
+                                </div>
+                        </div>
                         <div class="slide__decor-composition">
                             <svg class="composition__svg">
                                 <use xlink:href="img/svg/sprite/content.svg#burger"></use>
@@ -155,7 +187,7 @@
                             ккал
                         </div>
                     </div>
-                    <div class="slide__content">
+                    <!-- <div class="slide__content">
                         <div class="title slide__title">Dark beef burger</div>
                         <p class="slide__text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра
                             эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического
@@ -166,13 +198,13 @@
                         <a href="#" class="slide__link">
                             <div class="slide__btn">Заказать</div>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
-                <button type="button" class="burger-info__btn-right">
+                <!-- <button type="button" class="burger-info__btn-right">
                     <svg class="btn-right__svg">
                         <use xlink:href="img/svg/sprite/content.svg#scroll"></use>
                     </svg>
-                </button>
+                </button> -->
             </div>
         </section>
         <section class="section team">
@@ -502,6 +534,7 @@
         </ul>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="jquery.bxslider.js"></script>
     <script src="ymaps.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </body>
