--- a/index.html
+++ b/index.html
@@ -395,40 +395,40 @@
             <div class="container delivery__container">
                 <div class="title delivery__tittle">Закажите доставку</div>
                 <div class="delivery__form">
-                    <form action="" class="delivery__form-elem">
+                    <form action="server.php" method="POST" id="delivery-form" class="delivery__form-elem">
                         <div class="delivery__form-content">
                             <div class="delivery__form-row">
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Имя</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="name" class="delivery__form-input" required>
                                 </label>
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Телефон</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="telephone" class="delivery__form-input" required>
                                 </label>
                             </div>
                             <div class="delivery__form-row">
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Улица</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="street" class="delivery__form-input" required>
                                 </label>
                             </div>
                             <div class="delivery__form-row">
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Дом</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="house" class="delivery__form-input" required>
                                 </label>
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Корпус</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="housing" class="delivery__form-input" required>
                                 </label>
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Квартира</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="apartment" class="delivery__form-input" required>
                                 </label>
                                 <label class="delivery__form-block">
                                     <div class="delivery__form-block-tittle">Этаж</div>
-                                    <input type="text" class="delivery__form-input">
+                                    <input type="text" name="floor" class="delivery__form-input" required>
                                 </label>
                             </div>
                         </div>
@@ -441,13 +441,13 @@
                             </div>
                             <div class="delivery__form-row delivery__form-row--center">
                                 <label class="delivery__form-check">
-                                    <input name="ask" type="radio" class="delivery__form-radio-money" value="money">
+                                    <input name="buy" type="radio" class="delivery__form-radio-money" value="money" required>
                                     <div class="delivery__form-block-tittle">Потребуется сдача</div>
                                     <span class="delivery__check-money"></span>
                                     <span class="delivery__point-money"></span>
                                 </label>
                                 <label class="delivery__form-check">
-                                    <input name="ask" type="radio" class="delivery__form-radio-card" value="card">
+                                    <input name="buy" type="radio" class="delivery__form-radio-card" value="card" required>
                                     <div class="delivery__form-block-tittle">Оплата по карте</div>
                                     <span class="delivery__check-card"></span>
                                     <span class="delivery__point-card"></span>
@@ -455,12 +455,12 @@
                             </div>
                             <div class="delivery__form-row delivery__form-row--center">
                                 <label class="delivery__form-check">
-                                    <input type="checkbox" class="delivery__form-radio">
+                                    <input type="checkbox" name="disturb" class="delivery__form-radio">
                                     <div class="delivery__form-block-tittle">Не перезванивать</div>
                                 </label>
                             </div>
                             <div class="delivery__form-row delivery__form-row--center">
-                                <button type="button" class="btn delivery__btn">Заказать</button>
+                                <button type="submit" class="btn delivery__btn">Заказать</button>
                                 <button type="button" class="btn delivery__btn-clear">Очистить</button>
                             </div>
                         </div>
